WEB-7517 Health Checks Test Service is now working finally! Initial real database check is working also.