@@ -12,9 +12,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <cargo.servlet.port>7090</cargo.servlet.port>
-        <cargo.rmi.port>7019</cargo.rmi.port>
-        <cargo.tomcat.ajp.port>7020</cargo.tomcat.ajp.port>
+        <project.jetty9x.version>9.2.7.v20150116</project.jetty9x.version>
     </properties>
 
     <dependencies>
@@ -26,61 +24,83 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Logging -->
+<!--
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+-->
+
         <!-- Servlet API -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
-        <!-- Jetty -->
+        <!-- Spring -->
         <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>7.5.1.v20110908</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <!-- Libraries needed by Jetty embedded container -->
+        <dependency>
+            <groupId>net.sourceforge.jtds</groupId>
+            <artifactId>jtds</artifactId>
+            <version>1.3.1</version>
         </dependency>
         <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jsp-2.1-glassfish</artifactId>
-            <version>2.1.v20100127</version>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.0-pre5</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}##${project.version}</finalName>
         <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
-            <!-- The maven app assembler plugin will generate a script that sets up the classpath and runs your project -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.1.1</version>
-                <configuration>
-                    <assembleDirectory>target</assembleDirectory> 
-                    <programs>
-                        <program>
-                            <mainClass>nz.govt.nzqa.healthchecks.Main</mainClass>
-                            <name>webapp</name>
-                        </program>
-                    </programs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>assemble</goal>
-                        </goals>
-                    </execution>				
-                </executions>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.4.5</version>
+                <executions>
+                    <execution>
+                        <id>start-cargo</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop-cargo</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
@@ -93,68 +113,66 @@
             </properties>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.4.5</version>
-                        <configuration>
-                            <!-- Container configuration -->
-                            <container>
-                                <containerId>jetty9x</containerId>
-                                <type>embedded</type>
-                                <!-- These values should be the DB connection properties used during dev testing locally. -->
-                                <systemProperties>
-                                    <healthchecks.port>9090</healthchecks.port>
-                                    <spring.profiles.active>local</spring.profiles.active>
-                                </systemProperties>
-                            </container>
-                            <configuration>
-                                <properties>
-                                    <cargo.jvmargs>-XX:+CMSPermGenSweepingEnabled -XX:MaxPermSize=512M
-                                        -Dfile.encoding=UTF-8
-                                    </cargo.jvmargs>
-                                    <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
-                                    <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
-                                    <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
-                                    <cargo.datasource.datasource.eqa>
-                                        cargo.datasource.driver=net.sourceforge.jtds.jdbc.Driver|
-                                        cargo.datasource.url=jdbc:jtds:sybase://devase01:6000/web_eqa5;JCONNECT_VERSION=6&amp;HOSTNAME=nathan-smith;|
-                                        cargo.datasource.jndi=jdbc/web_eqa_db|
-                                        cargo.datasource.username=eqa_user_dev|
-                                        cargo.datasource.password=password
-                                    </cargo.datasource.datasource.eqa>
-                                </properties>
-                            </configuration>
-                            <!-- Configuration to use with the container or the deployer -->
-                            <deployables>
-                                <deployable>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>healthchecks</artifactId>
-                                    <type>war</type>
-                                    <properties>
-                                        <context></context>
-                                    </properties>
-                                </deployable>
-                            </deployables>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>start-container</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>stop-container</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
                 </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jetty9x</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.codehaus.cargo</groupId>
+                            <artifactId>cargo-maven2-plugin</artifactId>
+                            <configuration>
+                                <!-- Container configuration -->
+                                <container>
+                                    <containerId>jetty9x</containerId>
+                                    <timeout>180000</timeout>
+                                    <artifactInstaller>
+                                        <groupId>org.eclipse.jetty</groupId>
+                                        <artifactId>jetty-distribution</artifactId>
+                                        <version>${project.jetty9x.version}</version>
+                                    </artifactInstaller>
+                                    <!-- These values should be the DB connection properties used during dev testing locally. -->
+                                    <systemProperties>
+                                        <healthchecks.port>9090</healthchecks.port>
+                                        <spring.profiles.active>local</spring.profiles.active>
+                                    </systemProperties>
+                                    <dependencies>
+                                        <dependency>
+                                            <groupId>net.sourceforge.jtds</groupId>
+                                            <artifactId>jtds</artifactId>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>c3p0</groupId>
+                                            <artifactId>c3p0</artifactId>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>log4j</groupId>
+                                            <artifactId>log4j</artifactId>
+                                        </dependency>
+                                    </dependencies>
+                                    <!--<log>${project.build.directory}/healthchecks-testservice.log</log>-->
+                                </container>
+                                <!-- Configuration to use with the container or the deployer -->
+                                <deployables>
+                                    <deployable>
+                                        <groupId>${project.groupId}</groupId>
+                                        <artifactId>healthchecks-testservice</artifactId>
+                                        <type>war</type>
+                                        <properties>
+                                            <context>webapi</context>
+                                        </properties>
+                                    </deployable>
+                                </deployables>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
